# amdstatsem

./: .gitignore  README.md  _quarto.yml  index.html  index.qmd  listings.json  robots.txt  search.json  sitemap.xml  theme-dark.scss  theme.scss
.github/workflows/: build_website.yml
about/: about_MLM_sose23.html  about_MLM_sose23.qmd  about_cogmod.html  about_cogmod.qmd  about_jan.html  about_jan.qmd  about_jose.html  about_jose.qmd
cogmod_sem_sose23/: ML_Workshop.html  ML_Workshop.qmd  Termin1.html  Termin1.qmd  Termin2.html  Termin2.qmd
cogmod_sem_sose23/MPT-Workshop/: MPT-Workshop.html  MPT-Workshop.qmd
cogmod_sem_sose23/R-Scripts/: power_law.R
data/: cognitive_function.RData  meeresspiegel.csv  schulunlust.txt  tinnitus.RData
mlm_seminar_sose23/: hierarchische_daten.html  linear_regression.html  lineare_regression.html  lineare_regression.qmd  lineare_regression_parameters.html  lineare_regression_parameters.qmd
mlm_seminar_sose_23/: hierarchische_daten.html  hierarchische_daten.qmd  linear_regression.html  linear_regression.qmd
python/: mlm_figures.py
scripts/ML Workshop/: ML_Workshop.html  ML_Workshop_stud.html  ML_Workshop_stud.qmd
scripts/advanced-r/: Advanced_R_SS23.html  Advanced_R_SS23.qmd  Advanced_R_stud.html  Advanced_R_stud.qmd  Study_2_dm.csv  advanced-r.html
scripts/ddm-workshop/fast-dm-mac/: AUTHORS  Makefile  Makefile.am  NEWS.txt  config.status  construct-samples  construct-samples.c  experiment.c  fast-dm  file.c  main.c  method-cs.c  method-ks.c  method-ml.c  method-ml.old.c  plot-density  plot-density.c  test-density.c  test-file.c  test-full  test-generate  test-pde.c  test-phi.c  test-simplex2.c
scripts/ddm-workshop/fast-dm-mac/.deps/: cdf.Po  construct-samples.Po  container.Po  dataset.Po  density.Po  experiment.Po  file.Po  main.Po  method-cs.Po  method-ml.Po  parameters.Po  phi.Po  plot-density.Po  precision.Po  util.Po
(+39 files in other folders)
